baseline-module-jvm-args: Fix bug where compiler plugin `--add-exports` are added to `compilerArgs` instead of `forkArgs`; allow `--release` and `--add-exports` compiler args to be used together (#3324)
baseline-module-jvm-args: Fix bug where compiler plugin `--add-exports` are added to `compilerArgs` instead of `forkArgs`; allow `--release` and `--add-exports` compiler args to be used together